--- a/source/form.html
+++ b/source/form.html
@@ -54,14 +54,14 @@
       </div>
       <form class="contest__form" action="https://echo.htmlacademy.ru" method="post">
         <fieldset class="contest__fieldset">
-          <ul class="contest__list">
-            <li class="contest__item"><label class="contest__label" for="name">Имя:</label>
-              <input class="contest__input" type="text" name="name" id="name" placeholder="Введите ваше имя"></li>
-            <li class="contest__item"><label class="contest__label" for="surname">Фамилия:</label>
-              <input class="contest__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию"></li>
-            <li class="contest__item"><label class="contest__label" for="middle-name">Отчество:</label>
-              <input class="contest__input" type="text" name="middle-name" id="middle-name" placeholder="Ну и отчество тоже"></li>
-          </ul>
+          <div class="contest__list">
+            <div class="contest__item"><label class="contest__label" for="name">Имя:</label>
+              <input class="contest__input" type="text" name="name" id="name" placeholder="Введите ваше имя"></div>
+            <div class="contest__item"><label class="contest__label" for="surname">Фамилия:</label>
+              <input class="contest__input" type="text" name="surname" id="surname" placeholder="Укажите фамилию"></div>
+            <div class="contest__item"><label class="contest__label" for="middle-name">Отчество:</label>
+              <input class="contest__input" type="text" name="middle-name" id="middle-name" placeholder="Ну и отчество тоже"></div>
+          </div>
         </fieldset>
         <fieldset class="contest__fieldset contest__fieldset--information">
           <legend class="contest__legend contest__accent contest__legend--contacts">Контактная информация</legend>
