--- a/source/photo.html
+++ b/source/photo.html
@@ -51,15 +51,15 @@
       <h2 class="photo__description description">Взгляните на фотографии, которые выкладывают пользователи!Видите, как не хватает ваших?</h2>
       <div class="photo__panorama panorama">
         <img class="panorama__picture" src="img/panorama-mobile@1x.jpg" width="320" height="137" alt="Фотография красивого вида">
-        <div class="panorama__wrapper container">
+        <div class="panorama__wrapper">
           <div class="pamorama__username-wrapper">
             <p class="panorama__username">Аннa</p>
             <p class="panorama__activity"><span class="visually-hidden">Последняя активность</span>(5 минут назад)</p>
           </div>
           <p class="panorama__comment">Прыгать или нет? Напишите в коментарии свой совет и
             смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
-          <div class="panorama__button-and-like">
-            <button class="button photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+          <div class="panorama__but-like">
+            <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                 <g>
                   <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
                 </g>
@@ -68,8 +68,9 @@
           </div>
         </div>
       </div>
-      <ul class="photo-list">
-        <li class="photo-list__item container">
+      <div class="container photo-list">
+      <ul class="photo-list__inner">
+        <li class="photo-list__item">
           <img class="photo__picture" src="img/photo-car-mobile@1x.jpg" width="280" height="180" alt="Фотография машины">
           <div class="photo__wrapper">
             <div class="photo__username-wrapper">
@@ -77,8 +78,8 @@
               <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(5 часов назад)</p>
             </div>
             <p class="photo__comment">Вчера он на луну летал, сегодня в руки к нам попал.</p>
-            <div class="photo__button-and-like">
-              <button class="button photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+            <div class="photo__but-like">
+              <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                   <g>
                     <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
                   </g>
@@ -87,7 +88,7 @@
             </div>
           </div>
         </li>
-        <li class="photo-list__item container">
+        <li class="photo-list__item">
           <img class="photo__picture" src="img/photo-drumset-mobile@1x.jpg" width="280" height="180" alt="Фотография барабанной установки">
           <div class="photo__wrapper">
             <div class="photo__username-wrapper">
@@ -95,8 +96,8 @@
               <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(12 часов назад)</p>
             </div>
             <p class="photo__comment">Соседи будут рады!</p>
-            <div class="photo__button-and-like">
-              <button class="button photo__like-button" type="button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+            <div class="photo__but-like">
+              <button class="photo__like-button" type="button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                   <g>
                     <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
                   </g>
@@ -106,7 +107,7 @@
             </div>
           </div>
         </li>
-        <li class="photo-list__item container">
+        <li class="photo-list__item">
           <img class="photo__picture" src="img/photo-window-mobile@1x.jpg" width="280" height="180" alt="Фотография высоких зданий">
           <div class="photo__wrapper">
             <div class="photo__username-wrapper">
@@ -114,8 +115,8 @@
               <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(20 часов назад)</p>
             </div>
             <p class="photo__comment">Здесь могла быть ваша цитата о высоком и вечном.</p>
-            <div class="photo__button-and-like">
-              <button class="button photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+            <div class="photo__but-like">
+              <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                   <g>
                     <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
                   </g>
@@ -124,7 +125,7 @@
             </div>
           </div>
         </li>
-        <li class="photo-list__item container">
+        <li class="photo-list__item">
           <img class="photo__picture" src="img/photo-fair-mobile@1x.jpg" width="280" height="180" alt="Фотография кубанской бахчи">
           <div class="photo__wrapper">
             <div class="photo__username-wrapper">
@@ -132,8 +133,8 @@
               <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(25 часов назад)</p>
             </div>
             <p class="photo__comment">Самая кубанская в мире!</p>
-            <div class="photo__button-and-like">
-              <button class="button photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+            <div class="photo__but-like">
+              <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                   <g>
                     <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
                   </g>
@@ -142,7 +143,7 @@
             </div>
           </div>
         </li>
-        <li class="photo-list__item container">
+        <li class="photo-list__item">
           <img class="photo__picture" src="img/photo-pov-mobile@1x.jpg" width="280" height="180" alt="Фотография мужских ног на холме">
           <div class="photo__wrapper ">
             <div class="photo__username-wrapper">
@@ -150,8 +151,8 @@
               <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(40 часов назад)</p>
             </div>
             <p class="photo__comment">Где снег-то?</p>
-            <div class="photo__button-and-like">
-              <button class="button photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+            <div class="photo__but-like">
+              <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                   <g>
                     <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
                   </g>
@@ -160,15 +161,15 @@
             </div>
           </div>
         </li>
-        <li class="photo-list__item container"><img class="photo__picture" src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Фотография самолета">
+        <li class="photo-list__item"><img class="photo__picture" src="img/photo-wing-mobile@1x.jpg" width="280" height="180" alt="Фотография самолета">
           <div class="photo__wrapper">
             <div class="photo__username-wrapper">
               <p class="photo__username">Надежда</p>
               <p class="photo__activity"><span class="visually-hidden">Последняя активность</span>(45 часов назад)</p>
             </div>
             <p class="photo__comment">Всем GM и взаимные лайки!</p>
-            <div class="photo__button-and-like">
-              <button class="button photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
+            <div class="photo__but-like">
+              <button class="photo__like-button"><span class="visually-hidden">Поставить лайк</span><svg class="photo__heart" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="12.545px" height="11.99px" viewBox="521.939 473.064 12.545 11.99" enable-background="new 521.939 473.064 12.545 11.99" xml:space="preserve">
                   <g>
                     <path d="M528.174,485.055c-0.212,0-0.412-0.091-0.552-0.249c-3.798-4.324-4.644-5.298-4.858-5.572l-0.004,0.0 c-0.529-0.675-0.821-1.518-0.821-2.373c0-2.095,1.704-3.799,3.799-3.799c0.934,0,1.804,0.32,2.484,0.898 c0.696-0.578,1.56-0.898,2.463-0.898c2.095,0,3.799,1.704,3.799,3.799c0,0.909-0.318,1.754-0.896,2.381l-4.86,5.561 C528.587,484.964,528.386,485.055,528.174,485.055L528.174,485.055z M523.929,478.349c0.208,0.255,2.471,2.839,4.243,4.858 l4.323-4.944c0.34-0.369,0.52-0.86,0.52-1.399c0-1.285-1.045-2.331-2.33-2.331c-0.729,0-1.421,0.344-1.9,0.943 c-0.142,0.178-0.353,0.267-0.585,0.275c-0.227-0.003-0.439-0.111-0.575-0.294c-0.441-0.587-1.129-0.925-1.887-0.925 c-1.285,0-2.33,1.046-2.33,2.331c0,0.678,0.275,1.171,0.507,1.467C523.919,478.336,523.925,478.342,523.929,478.349z" />
                   </g>
@@ -178,6 +179,7 @@
           </div>
         </li>
       </ul>
+    </div>
     </section>
     <section class="page-main-editor editor">
       <h2 class="visually-hidden">Редактирование фото</h2>
