--- a/source/index.html
+++ b/source/index.html
@@ -10,7 +10,7 @@
 
 <body>
   <header class="page-header page-header--index">
-    <div class="page-header__сontainer">
+    <div class="page-header__сontainer container">
       <a class="page-header__logo">
         <span class="page-header__image page-header__image--mobile"><svg class="page-header__logo-svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="74.426px" height="22.859px" viewBox="0 0 74.426 22.859" enable-background="new 0 0 74.426 22.859" xml:space="preserve">
             <g>
@@ -52,7 +52,7 @@
           <source media="(min-width: 660px)" srcset="../img/iphone-hand-tablet@1x.png">
           <img class="page-intro__picture-hand" src="../img/iphone-hand-mobile@1x.png" alt="Фотография руки с телефоном">
         </picture>
-        <div class="page-intro__wrapper  container">
+        <div class="page-intro__wrapper">
           <h2 class="page-intro__header page-intro__header--index">Взгляните на жизнь иначе!</h2>
           <a class="button page-intro__button" href="#">Скачать приложение</a>
           <ul class="page-intro__list available-list">
@@ -94,11 +94,8 @@
       <header class="features__header">
         <h3 class="features__slogan"><span class="features-slogan--one">Устали от серости мегаполиса?</span><span class="features__slogan--two">Нам есть, что вам предложить!</span></h3>
       </header>
-      <svg class="features__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="1200px" height="94.074px" viewBox="0 0 1200 94.074" enable-background="new 0 0 1200 94.074" xml:space="preserve">
-        <polygon points="1200,0 0,0 0,94.074 " />
-      </svg>
       <div class="features__wrapper">
-        <ul class="features__list">
+        <ul class="features__list container">
           <li class="features__item features__item--mood">
             <h4 class="features__name">Поднимает настроение</h4>
             <p class="features__info">Приложение позволит вам победить осеннюю хандру и депрессию буквально в несколько кликов!</p>
@@ -220,28 +217,28 @@
           </tr>
         </table>
         <div class="price-slider__wrapper">
-          <button class="price-slider__toggle" type="button">1</button>
-          <button class="price-slider__toggle price-slider__toggle--active" type="button">2</button>
-          <button class="price-slider__toggle" type="button">3</button>
+          <button class="price-slider__toggle" type="button"><span class="visually-hidden">1</span></button>
+          <button class="price-slider__toggle price-slider__toggle--active" type="button"><span class="visually-hidden">2</span></button>
+          <button class="price-slider__toggle" type="button"><span class="visually-hidden">3</span></button>
         </div>
         </table>
       </div>
     </section>
     <section class="page-main__contacts contacts">
-      <div class="contacts__wrapper">
+      <div class="contacts__wrapper container">
         <h5 class="contacts__header">Остались вопросы? Свяжитесь с нами!</h5>
         <ul class="contacts__list">
           <li class="contacts__item">
             <h6 class="contacts__title">Звоните:</h6>
-            <a href="tel:+78125556666" class="contacts__number">+7 (812) 555-66-66</a>
+            <a href="tel:+78125556666" class="contacts__info contacts__info--number">+7 (812) 555-66-66</a>
           </li>
-          <li class="contacts__item">
+          <li class="contacts__item contacts__item--email">
             <h6 class="contacts__title">Пишите:</h6>
-            <a class="contacts__email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            <a class="contacts__info contacts__info--email" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
           </li>
           <li class="contacts__item">
             <h6 class="contacts__title">Приезжайте в гости:</h6>
-            <p class="contacts__adress">ул. Большая Конюшенная, 19/8</p>
+            <p class="contacts__info contacts__info--address">ул. Большая Конюшенная, 19/8</p>
           </li>
         </ul>
       </div>
