--- a/source/index.html
+++ b/source/index.html
@@ -162,19 +162,15 @@
       <div class="price__wrapper">
         <h4 class="visually-hidden">Тарифы и цены</h4>
         <table class="price__table">
-          <tr class="price__column">
-            <td class="price__title price__name visually-hidden">Тариф</td>
-            <td class="price__title price__name">База</td>
-            <td class="price__title price__name">Стандарт</td>
-            <td class="price__title price__name">Анлим</td>
+          <tr class="price__row">
+            <td class="price__title price__name visually-hidden">Тариф
+            <td class="price__title price__name">База
+              <span class="price__cost">1,99 USD</span></td>
+            <td class="price__title price__name price__name--hit">Стандарт
+              <span class="price__cost">3,99 USD</span></td>
+            <td class="price__title price__name">Анлим
+              <span class="price__cost">3,99 USD</span></td>
           </tr>
-          <tr class="price__column">
-            <td class="price__title visually-hidden">Цена</td>
-            <td class="price__title  price__cost">1,99 USD</td>
-            <td class="price__title  price__cost">3,99 USD</td>
-            <td class="price__title  price__cost">9,99 USD</td>
-          </tr>
-          <tr>
             <td class="price__column price__column--name">
               Розовый фильтр
             </td>
